[gd_scene load_steps=9 format=3 uid="uid://vfxig6jng4bp"]

[ext_resource type="Script" path="res://Scripts/main.gd" id="1_7lrpa"]
[ext_resource type="Texture2D" uid="uid://cwywu6c1uvi3t" path="res://Assets/Black Background.jpg" id="1_08eq0"]
[ext_resource type="Texture2D" uid="uid://wfwg8ym2og2h" path="res://Assets/Arrow.png" id="3_ai0w3"]
[ext_resource type="PackedScene" uid="uid://k6ul76xuaukw" path="res://Stratagem Panel.tscn" id="4_dn3xc"]
[ext_resource type="Script" path="res://Scripts/Left.gd" id="5_2olea"]
[ext_resource type="Script" path="res://Scripts/Right.gd" id="6_3v8yh"]
[ext_resource type="Script" path="res://Scripts/Up.gd" id="7_ndc63"]
[ext_resource type="Script" path="res://Scripts/Down.gd" id="8_rtgm8"]

[node name="Node" type="Node"]
script = ExtResource("1_7lrpa")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_08eq0")
expand_mode = 1

[node name="Control" parent="." instance=ExtResource("4_dn3xc")]

[node name="Button" type="Button" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -185.0
offset_top = -156.0
offset_right = 335.0
offset_bottom = 316.0
grow_horizontal = 0
grow_vertical = 0
scale = Vector2(0.2, 0.2)
icon = ExtResource("3_ai0w3")

[node name="Left" type="TouchScreenButton" parent="."]
position = Vector2(592, 400)
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("3_ai0w3")
script = ExtResource("5_2olea")

[node name="Right" type="TouchScreenButton" parent="."]
position = Vector2(752, 448)
rotation = 3.14159
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("3_ai0w3")
script = ExtResource("6_3v8yh")

[node name="Up" type="TouchScreenButton" parent="."]
position = Vector2(696, 344)
rotation = 1.5708
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("3_ai0w3")
script = ExtResource("7_ndc63")

[node name="Down" type="TouchScreenButton" parent="."]
position = Vector2(648, 448)
rotation = 4.71239
scale = Vector2(0.1, 0.1)
texture_normal = ExtResource("3_ai0w3")
script = ExtResource("8_rtgm8")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Left" to="." method="_on_left_pressed"]
[connection signal="pressed" from="Right" to="." method="_on_right_pressed"]
[connection signal="pressed" from="Up" to="." method="_on_up_pressed"]
[connection signal="pressed" from="Down" to="." method="_on_down_pressed"]
